# minidjvu_mod

./: .gitignore  INSTALL  Makefile.am  NEWS  README  configure.ac  wscript
debian/: .gitignore  changelog  control  copyright  libminidjvu-mod-dev.install  libminidjvu-mod0.install  rules
doc/: Makefile.am  decode.html  encode.html  minidjvu-mod.1  tifftodjvu_help.html
doc/ru/: Makefile.am  minidjvu-mod.1
include/: Makefile.am
include/minidjvu/: matcher.h
include/minidjvu-mod/: minidjvu-mod.h
include/minidjvu-mod/alg/: compress.h  delegate.h
include/minidjvu-mod/base/: 0porting.h  2io.h  3graymap.h  4bitmap.h  5image.h  base.h  version.h
include/minidjvu/alg/: classify.h  compress.h
include/minidjvu/base/: 4bitmap.h  5image.h
include/minidjvu/djvu/: djvu.h
po/: POTFILES.in  ru.po
src/: README
src/alg/: adjust_y.c  average.c  blitsort.c  classify.c  clean.c  compress.c  delegate.c  erosion.c  nosubst.c  render.c  smooth.c  split.c
src/base/: 0porting.c  1error.c  2io.c  3graymap.c  4bitmap.c  5image.c  6string.c  README  mdjvucfg.h  version.c
src/djvu/: bs.cpp  djvudir.cpp  djvuinfo.c  djvuload.c  djvusave.c  iff.c
src/image-io/: bmp.c  pbm.c  tiff.c  tiffload.c  tiffsave.c
src/jb2/: jb2load.cpp  jb2save.cpp  proto.c  zp.cpp  zp.h
src/matcher/: bitmaps.c  bitmaps.h  common.h  cuts.c  frames.c  no_mdjvu.h  patterns.c  patterns.cpp
src/windows/: minidjvu.nsi  tifftodjvu.hta
tools/: README  minidjvu-mod.c  minidjvu.c
tools/settings-reader/: AppOptions.cpp  AppOptions.h  ByteStream.cpp  ByteStream.h  DjVuGlobal.h  DjbzSetting.cpp  DjbzSetting.h  GException.cpp  GOS.cpp  GSmartPointer.cpp  GSmartPointer.h  GString.cpp  GURL.cpp  GURL.h  ParsingByteStream.cpp  ParsingByteStream.h  ParsingBytestream.h  README  SettingsReader.cpp  SettingsReader.h  SettingsReaderAdapter.cpp  SettingsReaderAdapter.h  UnicodeByteStream.cpp  UnicodeByteStream.h
