nobase_include_HEADERS = minidjvu-mod/jb2.h minidjvu-mod/alg/classify.h		\
 minidjvu-mod/alg/compress.h minidjvu-mod/alg/split.h minidjvu-mod/alg/render.h	\
 minidjvu-mod/alg/smooth.h minidjvu-mod/alg/alg.h minidjvu-mod/alg/adjust_y.h	\
 minidjvu-mod/alg/clean.h minidjvu-mod/alg/nosubst.h minidjvu-mod/alg/erosion.h	\
 minidjvu-mod/alg/blitsort.h minidjvu-mod/alg/delegate.h			\
 minidjvu-mod/alg/average.h minidjvu-mod/djvu/iff.h minidjvu-mod/djvu/djvu.h	\
 minidjvu-mod/image-io/tiff.h minidjvu-mod/image-io/pbm.h			\
 minidjvu-mod/image-io/image-io.h minidjvu-mod/image-io/bmp.h			\
 minidjvu-mod/minidjvu-mod.h minidjvu-mod/base/4bitmap.h minidjvu-mod/base/1error.h	\
 minidjvu-mod/base/3graymap.h minidjvu-mod/base/0porting.h			\
 minidjvu-mod/base/version.h minidjvu-mod/base/6string.h			\
 minidjvu-mod/base/5image.h minidjvu-mod/base/base.h minidjvu-mod/base/2io.h	\
 minidjvu-mod/matcher.h
